<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".TeamsFormFragment"
    android:paddingHorizontal="16dp"
    android:paddingTop="48dp"
    >


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/team_description"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="40dp"
        />

    <EditText
        android:id="@+id/teamDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/team_hint"
        android:inputType="textPersonName"
        android:text=""
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:layout_constraintTop_toBottomOf="@id/teamDescription"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteX="18dp"
        tools:layout_editor_absoluteY="144dp"
        android:layout_marginTop="32dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>