<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".TeamsFormFragment"
    android:paddingHorizontal="16dp"
    android:paddingTop="32dp"
    android:background="?colorOnPrimary"
    >

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/playerNameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/playerName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/playerCPFLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/cpf"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/playerNameLayout"
        android:layout_marginTop="32dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/playerCPF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/playerBirthYearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/birth_year"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/playerCPFLayout"
        android:layout_marginTop="32dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/playerBirthYear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/teamsHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/team"
        android:textColor="@color/fadeWhite"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/playerBirthYearLayout"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="2dp"
        android:background="@color/fadeWhite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/teamsHint"
        android:layout_marginTop="4dp"
        android:id="@+id/teamsListLayout"
        >
        <Spinner
            android:id="@+id/teamsList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            />
    </LinearLayout>


    <Button
        android:id="@+id/saveButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:layout_constraintTop_toBottomOf="@id/teamsListLayout"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:textColor="@color/white"
        style="@style/Widget.MaterialComponents.Button"
        />

</androidx.constraintlayout.widget.ConstraintLayout>